Unregistering DATA_PT_modifiers doesn't remove modifier panels #77541

Closed
opened 2020-06-07 00:39:44 +02:00 by Antti Tikka · 5 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-06 14:18, hash: aed11c673e
Worked: 2.90 before the new modifier panels

Short description of error
Unregistering DATA_PT_modifiers doesn't remove panels after the new modifier panels were introduced. I use that for the Modifier List addon.

Exact steps for others to reproduce the error
Add some modifiers to the default cube and run the following code:

from bl_ui.properties_data_modifier import DATA_PT_modifiers
from bpy.utils import unregister_class

unregister_class(DATA_PT_modifiers)

Only the modifier menu disappears but the panels stay.

However, modifiers added after that don't appear. E.g.:

 bpy.context.object.modifiers.new("Array", 'ARRAY')
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-06 14:18, hash: `aed11c673e` Worked: 2.90 before the new modifier panels **Short description of error** Unregistering DATA_PT_modifiers doesn't remove panels after the new modifier panels were introduced. I use that for the Modifier List addon. **Exact steps for others to reproduce the error** Add some modifiers to the default cube and run the following code: ``` from bl_ui.properties_data_modifier import DATA_PT_modifiers from bpy.utils import unregister_class unregister_class(DATA_PT_modifiers) ``` Only the modifier menu disappears but the panels stay. However, modifiers added after that don't appear. E.g.: ``` bpy.context.object.modifiers.new("Array", 'ARRAY') ```
Author

Added subscriber: @Symstract

Added subscriber: @Symstract
Hans Goudey was assigned by Antti Tikka 2020-06-07 00:40:50 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report, I'll deal with this as soon as possible. If there are any other problems you run into let me know. I will admit I didn't fully make sure what you're doing works yet, but I fully plan to.

Thanks for the report, I'll deal with this as soon as possible. If there are any other problems you run into let me know. I will admit I didn't fully make sure what you're doing works yet, but I fully plan to.

This issue was referenced by ec25084f5a

This issue was referenced by ec25084f5a404cbca4ceffd659d46b21c758522a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#77541
No description provided.